--- a/cart.css
+++ b/cart.css
@@ -29,7 +29,7 @@
     
 }
 .term1:hover{
-    padding: 15px;
+    transform: scale(1.02);
     background-color: rgba(255, 72, 82, 0.6);
     color: white;
     font-weight: bolder;
